[package]
name = "macrokata"
version = "0.1.0"
edition = "2021"
default-run = "macrokata"

[[bin]]
name = "macrokata"
path = "src/main.rs"

[[bin]]
name = "01_my_first_macro"
path = "exercises/01_my_first_macro/main.rs"

[[bin]]
name = "01_my_first_macro_soln"
path = "exercises/01_my_first_macro/solutions/main.rs"

[[bin]]
name = "02_numbers"
path = "exercises/02_numbers/main.rs"

[[bin]]
name = "02_numbers_soln"
path = "exercises/02_numbers/solutions/main.rs"

[[bin]]
name = "03_literal_variables"
path = "exercises/03_literal_variables/main.rs"

[[bin]]
name = "03_literal_variables_soln"
path = "exercises/03_literal_variables/solutions/main.rs"

[[bin]]
name = "04_expression_variables"
path = "exercises/04_expression_variables/main.rs"

[[bin]]
name = "04_expression_variables_soln"
path = "exercises/04_expression_variables/solutions/main.rs"

[[bin]]
name = "05_more_complex_example"
path = "exercises/05_more_complex_example/main.rs"

[[bin]]
name = "05_more_complex_example_soln"
path = "exercises/05_more_complex_example/solutions/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
