[package]
name = "macrokata"
version = "0.3.1"
edition = "2021"
default-run = "macrokata"

[[bin]]
name = "macrokata"
path = "src/main.rs"

[[bin]]
name = "01_my_first_macro"
path = "exercises/01_my_first_macro/main.rs"

[[bin]]
name = "01_my_first_macro_soln"
path = "exercises/01_my_first_macro/solutions/main.rs"

[[bin]]
name = "02_numbers"
path = "exercises/02_numbers/main.rs"

[[bin]]
name = "02_numbers_soln"
path = "exercises/02_numbers/solutions/main.rs"

[[bin]]
name = "03_literal_variables"
path = "exercises/03_literal_variables/main.rs"

[[bin]]
name = "03_literal_variables_soln"
path = "exercises/03_literal_variables/solutions/main.rs"

[[bin]]
name = "04_expression_variables"
path = "exercises/04_expression_variables/main.rs"

[[bin]]
name = "04_expression_variables_soln"
path = "exercises/04_expression_variables/solutions/main.rs"

[[bin]]
name = "05_more_complex_example"
path = "exercises/05_more_complex_example/main.rs"

[[bin]]
name = "05_more_complex_example_soln"
path = "exercises/05_more_complex_example/solutions/main.rs"

[[bin]]
name = "06_repetition"
path = "exercises/06_repetition/main.rs"

[[bin]]
name = "06_repetition_soln"
path = "exercises/06_repetition/solutions/main.rs"

[[bin]]
name = "07_more_repetition"
path = "exercises/07_more_repetition/main.rs"

[[bin]]
name = "07_more_repetition_soln"
path = "exercises/07_more_repetition/solutions/main.rs"

[[bin]]
name = "08_nested_repetition"
path = "exercises/08_nested_repetition/main.rs"

[[bin]]
name = "08_nested_repetition_soln"
path = "exercises/08_nested_repetition/solutions/main.rs"

[[bin]]
name = "09_ambiguity_and_ordering"
path = "exercises/09_ambiguity_and_ordering/main.rs"

[[bin]]
name = "09_ambiguity_and_ordering_soln"
path = "exercises/09_ambiguity_and_ordering/solutions/main.rs"

[[bin]]
name = "10_macros_calling_macros"
path = "exercises/10_macros_calling_macros/main.rs"

[[bin]]
name = "10_macros_calling_macros_soln"
path = "exercises/10_macros_calling_macros/solutions/main.rs"

[[bin]]
name = "11_macro_recursion"
path = "exercises/11_macro_recursion/main.rs"

[[bin]]
name = "11_macro_recursion_soln"
path = "exercises/11_macro_recursion/solutions/main.rs"

[[bin]]
name = "12_hygienic_macros"
path = "exercises/12_hygienic_macros/main.rs"

[[bin]]
name = "12_hygienic_macros_soln"
path = "exercises/12_hygienic_macros/solutions/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.0.26", features = ["derive"] }
imara-diff = "0.1.5"
glob = "0.3.0"
